--- a/header_smart.html
+++ b/header_smart.html
@@ -36,6 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/intro.js"></script>
+    <script src="./js/header_smart.js"></script>
 </head>
 <body>
     <div class="header_smart">
@@ -81,11 +82,11 @@
 
             <div class="common_frame hg3">
                 <ul class="gnb_smart">
-                    <li><a href="./new.html">신제품</a></li>
-                    <li><a href="./bestseller.html">베스트셀러</a></li>
+                    <li class="smart_dep1"><a href="./new.html">신제품</a></li>
+                    <li class="smart_dep1"><a href="./bestseller.html">베스트셀러</a></li>
                     
                     <!-- 스킨케어 -->
-                    <li>
+                    <li class="smart_dep1">
                         <div class="menu_icon">
                             <a href="./">스킨케어</a>
                             <figure>
@@ -93,46 +94,134 @@
                             </figure>
                         </div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li><a href="./skincare/cleaner-toner.html">클렌저 / 토너</a></li>
+                            <li><a href="./skincare/repair-serum.html">리페어 세럼 / 에센스</a></li>
+                            <li><a href="./skincare/lotion.html">로션 / 크림</a></li>
+                            <li><a href="./skincare/eyecare.html">아이 케어</a></li>
+                            <li><a href="./skincare/specialcare.html">스페셜 케어 / 마스크</a></li>
+                            <li><a href="./skincare/suncare.html">선 케어</a></li>
                         </ul>
-                        <figure>
+                        <figure class="menu_img">
                             <img src="./resource/header/skin_care_menu.png" alt="스킨케어 메뉴 이미지">
                         </figure>
                     </li>
 
                     <!-- 메이크업 -->
-                    <li>
+                    <li class="smart_dep1">
                         <div class="menu_icon">
                             <a href="./">메이크업</a>
                             <figure>
-                                <img src="./resource/header/make_up_menu.png" alt="메이크업 메뉴 보기">
+                                <img src="./resource/svg/header_smart/Chevron down.svg" alt="메이크업 메뉴 보기">
                             </figure>
                         </div>
                         <ul>
-                            <li>
-                                <a href="">립</a>
+                            <li class="smart_dep2">
+                                <a href="./makeup/lip/lip-all.html">립</a>
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li><a href="./makeup/lip/lipstick.html">립스틱</a></li>
+                                    <li><a href="./makeup/lip/liquid.html">리퀴드 립</a></li>
+                                    <li><a href="./makeup/lip/gloss.html">립 글로스</a></li>
+                                    <li><a href="./makeup/lip/care.html">립 케어</a></li>
                                 </ul>
                             </li>
-                            <li><a href="">아이</a></li>
-                            <li><a href="">페이스</a></li>
-                        </ul>    
+                            <li class="smart_dep2">
+                                <a href="./makeup/eye/eye-all.html">아이</a>
+                                <ul>
+                                    <li><a href="./makeup/eye/shadow.html">아이섀도우</a></li>
+                                    <li><a href="./makeup/eye/brow.html">아이브로우</a></li>
+                                    <li><a href="./makeup/eye/liner.html">아이라이너</a></li>
+                                    <li><a href="./makeup/eye/mascara.html">마스카라</a></li>
+                                    <li><a href="./makeup/eye/acc.html">액세서리</a></li>
+                                </ul>
+                            </li>
+                            <li class="smart_dep2">
+                                <a href="./makeup/face/face-all.html">페이스</a>
+                                <ul>
+                                    <li><a href="./makeup/face">파운데이션</a></li>
+                                    <li><a href="./makeup/face">컨실러</a></li>
+                                    <li><a href="./makeup/face">파우더</a></li>
+                                    <li><a href="./makeup/face">프라이머</a></li>
+                                    <li><a href="./makeup/face">블러쉬</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <figure class="menu_img">
+                            <img src="./resource/header/make_up_menu.png" alt="메이크업 메뉴 이미지">
+                        </figure>    
                     </li>
 
                     <!-- 향수 -->
-                    <li><a href="./">향수</a></li>
-                    <li><a href="./">브랜드스토리</a></li>
-                    <li><a href="./">공식몰서비스</a></li>
-                    <li><a href="./">마이페이지</a></li>
+                    <li class="smart_dep1">
+                        <div class="menu_icon">
+                            <a href="./perfume/perfume-all.html">향수</a>
+                            <figure>
+                                <img src="./resource/svg/header_smart/Chevron down.svg" alt="향수 메뉴 전체보기">
+                            </figure>
+                        </div>
+                        <ul>
+                            <li class="smart_dep2">
+                                <a href="./perfume/collection/collection-all.html">컬렉션 소개</a>
+                                <ul>
+                                    <li><a href="./perfume/collection/luxury.html">럭셔리 프래그런스</a></li>
+                                    <li><a href="./perfume/collection/beautiful-mag.html">뷰티풀 매그놀리아</a></li>
+                                    <li><a href="./perfume/collection/morden.html">모던 뮤즈</a></li>
+                                    <li><a href="./perfume/collection/pleasure.html">플레져</a></li>
+                                    <li><a href="./perfume/collection/beautiful.html">뷰티풀</a></li>
+                                </ul>
+                            </li>
+                            <li class="smart_dep2">
+                                <a href="./perfume/airen/airen-all.html">에어린</a>
+                                <ul>
+                                    <li><a href="./perfume/airen/airen.html">에어린</a></li>
+                                    <li><a href="./perfume/airen/premium.html">에어린 프리미엄</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <figure class="menu_img">
+                            <img src="./resource/header/perfume_menu.png" alt="향수 메뉴 이미지">
+                        </figure>
+                    </li>
+                    
+                    <!-- 브랜드스토리 -->
+                    <li class="smart_dep1">
+                        <div class="menu_icon">
+                            <a href="./">브랜드스토리</a>
+                            <figure>
+                                <img src="./resource/svg/header_smart/Chevron down.svg" alt="브랜드스토리 메뉴 전체보기">
+                            </figure>
+                        </div>
+                        <ul>
+                            <li><a href="./brandstory">에스티로더 브랜드 스토리</a></li>
+                            <li><a href="./brandstory">트렌드 리포트</a></li>
+                            <li><a href="./brandstory">목표&가치</a></li>
+                            <li><a href="./brandstory">Emerging Leaders Fund</a></li>
+                            <li><a href="./brandstory">원료도감</a></li>
+                            <li><a href="./brandstory">커뮤니티</a></li>
+                        </ul>
+                        <figure class="menu_img">
+                            <img src="./resource/header/brandstory_menu.png" alt="">
+                        </figure>
+                    </li>
+
+                    <li class="smart_dep1"><a href="./">공식몰서비스</a></li>
+
+                    <!-- 마이페이지 -->
+                    <li class="smart_dep1">
+                        <div class="menu_icon">
+                            <a href="./mypage/">마이페이지</a>
+                            <figure>
+                                <img src="./resource/svg/header_smart/Chevron down.svg" alt="마이페이지 메뉴 전체보기">
+                            </figure>
+                        </div>
+                        <ul>
+                            <li><a href="./mypage">주문정보</a></li>
+                            <li><a href="./mypage">장바구니</a></li>
+                            <li><a href="./mypage">개인정보조회</a></li>
+                        </ul>
+                        <figure class="menu_img">
+                            <img src="./resource/header/my_page_menu.png" alt="마이페이지 메뉴 이미지">
+                        </figure>
+                    </li>
                 </ul>
             </div>
         </div>
