--- a/order/order-shopping-cart.html
+++ b/order/order-shopping-cart.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="../css/footer.css">
 
     <link rel="stylesheet" href="../css/order/order-shopping-cart.css">
+    <script src="../js/order/order-shopping-cart.js"></script>
 
 </head>
 <body>
@@ -251,7 +252,163 @@
                                 </div>
                             </td>
                             <td class="quantity-col">1</td>
-                            <td class="price-col">₩103,000</td>
+                            <td class="price-col"><h4>₩103,000</h4></td>
+                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
+                        </tr>
+<tr>
+                            <td>
+                                <form action="">
+                                    <fieldset>
+                                        <input type="checkbox" class="product-checkbox">
+                                    </fieldset>
+                                </form>
+                            </td>
+                            <td>
+                                <div class="product">
+                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <div class="product-details">
+                                        <div class="product-name">
+                                            <p>Double Wear</p>
+                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
+                                        </div>
+                                        <p class="color-info">색상: 1W2 샌드</p>
+                                        <p class="quantity-info">수량: 1</p>
+                                        <h4 class="price">₩234,000</h4>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="quantity-col">1</td>
+                            <td class="price-col"><h4>₩103,000</h4></td>
+                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <form action="">
+                                    <fieldset>
+                                        <input type="checkbox" class="product-checkbox">
+                                    </fieldset>
+                                </form>
+                            </td>
+                            <td>
+                                <div class="product">
+                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <div class="product-details">
+                                        <div class="product-name">
+                                            <p>Double Wear</p>
+                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
+                                        </div>
+                                        <p class="color-info">색상: 1W2 샌드</p>
+                                        <p class="quantity-info">수량: 1</p>
+                                        <h4 class="price">₩234,000</h4>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="quantity-col">1</td>
+                            <td class="price-col"><h4>₩103,000</h4></td>
+                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <form action="">
+                                    <fieldset>
+                                        <input type="checkbox" class="product-checkbox">
+                                    </fieldset>
+                                </form>
+                            </td>
+                            <td>
+                                <div class="product">
+                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <div class="product-details">
+                                        <div class="product-name">
+                                            <p>Double Wear</p>
+                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
+                                        </div>
+                                        <p class="color-info">색상: 1W2 샌드</p>
+                                        <p class="quantity-info">수량: 1</p>
+                                        <h4 class="price">₩234,000</h4>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="quantity-col">1</td>
+                            <td class="price-col"><h4>₩103,000</h4></td>
+                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <form action="">
+                                    <fieldset>
+                                        <input type="checkbox" class="product-checkbox">
+                                    </fieldset>
+                                </form>
+                            </td>
+                            <td>
+                                <div class="product">
+                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <div class="product-details">
+                                        <div class="product-name">
+                                            <p>Double Wear</p>
+                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
+                                        </div>
+                                        <p class="color-info">색상: 1W2 샌드</p>
+                                        <p class="quantity-info">수량: 1</p>
+                                        <h4 class="price">₩234,000</h4>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="quantity-col">1</td>
+                            <td class="price-col"><h4>₩103,000</h4></td>
+                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <form action="">
+                                    <fieldset>
+                                        <input type="checkbox" class="product-checkbox">
+                                    </fieldset>
+                                </form>
+                            </td>
+                            <td>
+                                <div class="product">
+                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <div class="product-details">
+                                        <div class="product-name">
+                                            <p>Double Wear</p>
+                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
+                                        </div>
+                                        <p class="color-info">색상: 1W2 샌드</p>
+                                        <p class="quantity-info">수량: 1</p>
+                                        <h4 class="price">₩234,000</h4>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="quantity-col">1</td>
+                            <td class="price-col"><h4>₩103,000</h4></td>
+                            <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <form action="">
+                                    <fieldset>
+                                        <input type="checkbox" class="product-checkbox">
+                                    </fieldset>
+                                </form>
+                            </td>
+                            <td>
+                                <div class="product">
+                                    <figure><img src="../resource/order/order-finsh/Revitalizing Supreme.jpg" alt="evitalizing Supreme+ 리바이탈라이징 수프림 플러스 나이트 파워 바운스 크림 이미지"></figure>
+                                    <div class="product-details">
+                                        <div class="product-name">
+                                            <p>Double Wear</p>
+                                            <p>더블웨어 세컨 스킨 블러 쿠션</p>
+                                        </div>
+                                        <p class="color-info">색상: 1W2 샌드</p>
+                                        <p class="quantity-info">수량: 1</p>
+                                        <h4 class="price">₩234,000</h4>
+                                    </div>
+                                </div>
+                            </td>
+                            <td class="quantity-col">1</td>
+                            <td class="price-col"><h4>₩103,000</h4></td>
                             <td><figure><img src="../resource/order/shopping-cart/x_icon.svg" alt="제품 삭제"></figure></td>
                         </tr>
                     </tbody>
