--- a/signup/sign-end.html
+++ b/signup/sign-end.html
@@ -39,11 +39,11 @@
         <div class="common_frame">
             <h1>회원가입</h1>
             <ol>
-                <li class="act"><span>step1</span><strong>약관 동의</strong></li>
+                <li><span>step1</span><strong>약관 동의</strong></li>
                 <li class="arrow"></li>
                 <li><span>step2</span><strong>정보 입력</strong></li>
                 <li class="arrow"></li>
-                <li><span>step3</span><strong>가입 완료</strong></li>
+                <li class="act"><span>step3</span><strong>가입 완료</strong></li>
             </ol>
             <div class="txt">
                 <h1 class="txt1">ESTEE LAUDER</h1>
